--- a/es/fotografia/publicitaria.html
+++ b/es/fotografia/publicitaria.html
@@ -13,9 +13,9 @@
 		<div class="container lang-container d-none d-lg-block">
 			<div class="row">
 				<div class="col-2 text-right ml-auto">
-					<button id="langEsp" class="lang active">ES</button>
+					<a href="#" id="langEsp" class="lang active">ES</a>
 					<span class="lang">/</span>
-					<button id="langEng" class="lang">EN</button>
+					<a href="../../en/fotografia/publicitaria.html" id="langEng" class="lang">EN</a>
 				</div>
 			</div>
 		</div>
@@ -32,7 +32,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
 					<div id="nav-icon" class="nav-icon">
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<!-- <span class="icon-bar"></span> -->
 						<span class="icon-bar"></span>
 					</div>
 				</button>
@@ -42,60 +42,73 @@
 				<div class="collapse navbar-collapse" id="navbar">
 					<ul class="navbar-nav" id="navbar-nav-lp">
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL</a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarAudiovisual" data-toggle="dropdown" role="button">AUDIOVISUAL<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarAudiovisual">
-					        	<a class="dropdown-item" href="#.">Institucional</a>
-					        	<a class="dropdown-item" href="#.">Infraestructura</a>
-					        	<a class="dropdown-item" href="#.">Educativo</a>
-					        	<a class="dropdown-item" href="#.">Publicitario</a>
-					        	<a class="dropdown-item" href="#.">Mapping</a>
+					        	<a class="dropdown-item" href="../audiovisual/institucional.html">Institucional</a>
+					        	<a class="dropdown-item" href="../audiovisual/infraestructura.html">Infraestructura</a>
+					        	<a class="dropdown-item" href="../audiovisual/educativo.html">Educativo</a>
+					        	<a class="dropdown-item" href="../audiovisual/publicitario.html">Publicitario</a>
+					        	<a class="dropdown-item" href="../audiovisual/mapping.html">Mapping</a>
 					        </div>
+
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle" id="navBarFotografia" data-toggle="dropdown" role="button">FOTOGRAFÍA</a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarFotografia" data-toggle="dropdown" role="button">FOTOGRAFÍA<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarFotografia">
-					        	<a class="dropdown-item" href="naturaleza.html">Naturaleza</a>
-					        	<a class="dropdown-item" href="institucional.html">Institucional</a>
-					        	<a class="dropdown-item" href="infraestructura.html">Infraestructura</a>
-					        	<a class="dropdown-item" href="artistico.html">Artístico</a>
-					        	<a class="dropdown-item" href="extremo.html">Extremo</a>
+					        	<a class="dropdown-item" href="../fotografia/naturaleza.html">Naturaleza</a>
+					        	<a class="dropdown-item" href="../fotografia/institucional.html">Institucional</a>
+					        	<a class="dropdown-item" href="../fotografia/infraestructura.html">Infraestructura</a>
+					        	<a class="dropdown-item" href="../fotografia/artistico.html">Artístico</a>
+					        	<a class="dropdown-item" href="../fotografia/extremo.html">Extremo</a>
 					        	<a class="dropdown-item" href="#">Publicitaria</a>
-					        	<a class="dropdown-item" href="retrato.html">Retrato</a>
-					        	<a class="dropdown-item" href="pruducciones.html">Producciones en estudio</a>
-					        	<a class="dropdown-item" href="agricultura.html">Agricultura</a>
-					        	<a class="dropdown-item" href="cruce.html">Cruce de Los Andes</a>
+					        	<a class="dropdown-item" href="../fotografia/retrato.html">Retrato</a>
+					        	<a class="dropdown-item" href="../fotografia/producciones.html">Producciones en estudio</a>
+					        	<a class="dropdown-item" href="../fotografia/agricultura.html">Agricultura</a>
+					        	<a class="dropdown-item" href="../fotografia/cruce.html">Cruce de Los Andes</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle" id="navBarDiseño" data-toggle="dropdown" role="button">DISEÑO</a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarDiseño" data-toggle="dropdown" role="button">DISEÑO<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarDiseño">
-					        	<a class="dropdown-item" href="#">Gráfica</a>
-					        	<a class="dropdown-item" href="#">Editorial</a>
-					        	<a class="dropdown-item" href="#">Digital</a>
+					        	<a class="dropdown-item" href="../diseno/grafico.html">Gráfica</a>
+					        	<a class="dropdown-item" href="../diseno/editorial.html">Editorial</a>
+					        	<a class="dropdown-item" href="../diseno/digital.html">Digital</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link" dropdown-toggle" id="navBarEspacios" data-toggle="dropdown" role="button">ESPACIOS</a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarEspacios" data-toggle="dropdown" role="button">ESPACIOS<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarEspacios">
-					        	<a class="dropdown-item" href="#">Stand</a>
-					        	<a class="dropdown-item" href="#">Arquigrafía</a>
-					        	<a class="dropdown-item" href="#">Exposiciones</a>
+					        	<a class="dropdown-item" href="../espacios/stand.html">Stand</a>
+					        	<a class="dropdown-item" href="../espacios/arquigrafia.html">Arquigrafía</a>
+					        	<a class="dropdown-item" href="../espacios/exposiciones.html">Exposiciones</a>
 					        </div>
 						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">MONITOREO</a>
+						<li class="nav-item dropdown">
+							<a href="../monitoreo/monitoreo.html" class="nav-link navClose-link" id="navBarMonitoreo" data-toggle="" role="button">MONITOREO</a>
+							<div class="dropdown-menu" aria-labelledby="navBarMonitoreo">
+					        </div>
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle" id="navBarVuelos" data-toggle="dropdown" role="button"">VUELOS</a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarVuelos" data-toggle="dropdown" role="button">VUELOS<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu ultimo" aria-labelledby="navBarVuelos">
-					        	<a class="dropdown-item" href="#">Drone</a>
-					        	<a class="dropdown-item" href="#">Helicóptero</a>
+					        	<a class="dropdown-item" href="../vuelos/drone.html">Drone</a>
+					        	<a class="dropdown-item" href="../vuelos/helicoptero.html">Helicóptero</a>
 					        </div>
 						</li>
 					</ul>
+					<div id="lang-container" class="container lang-container d-block d-lg-none">
+						<div class="row">
+							<div class="col-12 text-left">
+								<a href="#" id="langEsp" class="lang active">ES</a>
+								<span class="lang">/</span>
+								<a href="../eng/index.html" id="langEng" class="lang">EN</a>
+							</div>
+						</div>
+					</div>
 				</div>
 				<!-- Fin de opciones de menú -->
 			</div>
+
 		</nav>
 	</header>
 	
