--- a/es/index.html
+++ b/es/index.html
@@ -63,7 +63,7 @@
 					        	<a class="dropdown-item" href="fotografia/extremo.html">Extremo</a>
 					        	<a class="dropdown-item" href="fotografia/publicitaria.html">Publicitaria</a>
 					        	<a class="dropdown-item" href="fotografia/retrato.html">Retrato</a>
-					        	<a class="dropdown-item" href="fotografia/pruducciones.html">Producciones en estudio</a>
+					        	<a class="dropdown-item" href="fotografia/producciones.html">Producciones en estudio</a>
 					        	<a class="dropdown-item" href="fotografia/agricultura.html">Agricultura</a>
 					        	<a class="dropdown-item" href="fotografia/cruce.html">Cruce de Los Andes</a>
 					        </div>
@@ -71,9 +71,9 @@
 						<li class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarDiseño" data-toggle="dropdown" role="button">DISEÑO<span class="closeNav d-lg-none">+</span></a>
 							<div class="dropdown-menu" aria-labelledby="navBarDiseño">
-					        	<a class="dropdown-item" href="diseño/grafico.html">Gráfica</a>
-					        	<a class="dropdown-item" href="diseño/editorial.html">Editorial</a>
-					        	<a class="dropdown-item" href="diseño/digital.html">Digital</a>
+					        	<a class="dropdown-item" href="diseno/grafico.html">Gráfica</a>
+					        	<a class="dropdown-item" href="diseno/editorial.html">Editorial</a>
+					        	<a class="dropdown-item" href="diseno/digital.html">Digital</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
