--- a/es/audiovisual/mapping.html
+++ b/es/audiovisual/mapping.html
@@ -61,7 +61,7 @@
 					        	<a class="dropdown-item" href="../fotografia/extremo.html">Extremo</a>
 					        	<a class="dropdown-item" href="../fotografia/publicitaria.html">Publicitaria</a>
 					        	<a class="dropdown-item" href="../fotografia/retrato.html">Retrato</a>
-					        	<a class="dropdown-item" href="../fotografia/pruducciones.html">Producciones en estudio</a>
+					        	<a class="dropdown-item" href="../fotografia/producciones.html">Producciones en estudio</a>
 					        	<a class="dropdown-item" href="../fotografia/agricultura.html">Agricultura</a>
 					        	<a class="dropdown-item" href="../fotografia/cruce.html">Cruce de Los Andes</a>
 					        </div>
@@ -113,7 +113,7 @@
 	
 	<div class="row mt-5">
 		<div class="col-12 text-center">
-			<p class="titulo">Hello world!</p>
+			<p class="titulo">Audiovisual - Mapping</p>
 		</div>
 	</div>
 
