--- a/admin/index.html
+++ b/admin/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>GHM - Contenidos</title>
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="../css/estilos-back.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
-<body class="login">
-	<div class="row justify-content-center align-items-center">
+<body>
+	<div class="row login justify-content-center align-items-center">
 		<div id="form-login" class="col-12 col-lg-4">
 			<form class="text-center">
 				<h1 class="titulo"><span class="icon-logoHuevo"></span></h1>
