--- a/es/fotografia/producciones.html
+++ b/es/fotografia/producciones.html
@@ -215,79 +215,105 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
-					<h6 class="titulo-footer">Home</h6>
-					<ul class="lista-footer">
-						<li><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
-						<li><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li><a class="item-footer" href="#.">Equipo</a></li>
-						<li><a class="item-footer" href="#.">Clientes</a></li>
-						<li><a class="item-footer" href="#.">Noticias</a></li>
-						<li><a class="item-footer" href="#.">Contacto</a></li>
+
+					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html">Contacto</a></li>
 					</ul>
-					<h6 class="titulo-footer">Audiovisual</h6>
-					<ul class="lista-footer">
-						<li class="item-footer"><a href="#." class="item-footer">Institucional</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Infraestructura</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Educativo</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Publicitario</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Mapping</a></li>
+
+					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-audiovisual" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a href="../audiovisual/institucional.html" class="item-footer">Institucional</a></li>
+						<li class="item-footer"><a href="../audiovisual/infraestructura.html" class="item-footer">Infraestructura</a></li>
+						<li class="item-footer"><a href="../audiovisual/educativo.html" class="item-footer">Educativo</a></li>
+						<li class="item-footer"><a href="../audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
+						<li class="item-footer"><a href="../audiovisual/mapping.html" class="item-footer">Mapping</a></li>
+					</ul>
+
+				</div>
+
+
+
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
+
+					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a class="item-footer" href="../fotografia/naturaleza.html">Naturaleza</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/institucional.html">Institucional</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/infraestructura.html">Infraestructura</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/artistico.html">Artístico</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/extremo.html">Extremo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/publicitaria.html">Publicitaria</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/retrato.html">Retrato</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/prodcciones.html">Producciones en estudio</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/agricultura.html">Agricultura</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/cruce.html">Cruce de Los Andes</a></li>
+					</ul>
+
+					<a id="closeNav4" data-toggle="" href="#footer-diseño" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Diseño<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-diseño" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a href="../diseno/digital.html" class="item-footer">Gráfica</a></li>
+						<li class="item-footer"><a href="../diseno/editorial.html" class="item-footer">Editorial</a></li>
+						<li class="item-footer"><a href="../diseno/digital.html" class="item-footer">Digital</a></li>
+					</ul>
+
+				</div>
+
+
+
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
+
+					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a class="item-footer" href="../espacios/stand.html">Stand</a></li>
+						<li class="item-footer"><a class="item-footer" href="../espacios/arquigrafia.html">Arquigrafía</a></li>
+						<li class="item-footer"><a class="item-footer" href="../espacios/exposiciones.html">Exposiciones</a></li>
+					</ul>
+
+					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<ul class="d-none d-lg-block lista-footer">
+					</ul>
+
+					<a id="closeNav6" data-toggle="" href="#footer-Drone" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Vuelos<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-Drone" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a class="item-footer" href="../vuelos/drone.html">Drone</a></li>
+						<li class="item-footer"><a class="item-footer" href="../vuelos/helicoptero.html">Helicóptero</a></li>
 					</ul>
 				</div>
+
+
+
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
-					<h6 class="titulo-footer">Fotografía</h6>
-					<ul class="lista-footer">
-						<li><a class="item-footer" href="#">Naturaleza</a></li>
-						<li><a class="item-footer" href="#.">Institucional</a></li>
-						<li><a class="item-footer" href="#.">Infraestructura</a></li>
-						<li><a class="item-footer" href="#.">Artístico</a></li>
-						<li><a class="item-footer" href="#.">Extremo</a></li>
-						<li><a class="item-footer" href="#.">Publicitaria</a></li>
-						<li><a class="item-footer" href="#.">Retrato</a></li>
-						<li><a class="item-footer" href="#.">Producciones en estudio</a></li>
-					</ul>
-					<h6 class="titulo-footer">Diseño</h6>
-					<ul class="lista-footer">
-						<li class="item-footer"><a href="#." class="item-footer">Gráfica</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Editorial</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Digital</a></li>
-					</ul>
-				</div>
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-					<h6 class="titulo-footer">Espacios</h6>
-					<ul class="lista-footer">
-						<li><a class="item-footer" href="#.">Stand</a></li>
-						<li><a class="item-footer" href="#.">Arquigrafía</a></li>
-						<li><a class="item-footer" href="#.">Exposiciones</a></li>
-					</ul>
-					<h6 class="titulo-footer">Monitoreo</h6>
-					<ul class="lista-footer">
-					</ul>
-					<h6 class="titulo-footer">Vuelos</h6>
-					<ul class="lista-footer">
-						<li><a class="item-footer" href="#.">Drone</a></li>
-						<li><a class="item-footer" href="#.">Helicóptero</a></li>
-					</ul>
-				</div>
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-					<h6 class="titulo-footer">Nuestra oficina</h6>
-					<ul class="lista-footer">
-						<li class="item-footer">Esteban Echeverría 772 Sur (5400)</li>
+
+					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
 						<li class="item-footer">San Juan · Argentina</li>
 						<li class="item-footer">+54 264 4266621 | 4085014</li>
-						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
+						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
+						<ul class="lista-footer redes">
+							<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
+							<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
+							<a href="#"><span class="icon-instagram"></span></a>
+						</ul>
 					</ul>
-					<ul class="lista-footer redes">
-						<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
-						<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
-						<a href="#"><span class="icon-instagram"></span></a>
+
+
+					<a id="closeNav8" data-toggle="" href="#footer-trabaja" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Trabajá con nosotros<span class="closeNav d-lg-none">+</span></a>
+					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
-					<h6 class="titulo-footer">Trabajá con nosotros</h6>
-					<ul class="lista-footer">
-						<li><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
-					</ul>
+					<div class="d-12 col-md-6 col-lg-3 class-aux border-top"></div>
+
 				</div>
+
 			</div>
-			<div class="row">
+			<div class="row logoHuevo-container">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
 					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
