--- a/es/index.html
+++ b/es/index.html
@@ -507,11 +507,11 @@
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-audiovisual" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a href="#." class="item-footer">Institucional</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Infraestructura</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Educativo</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Publicitario</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Mapping</a></li>
+						<li class="item-footer"><a href="audiovisual/institucional.html" class="item-footer">Institucional</a></li>
+						<li class="item-footer"><a href="audiovisual/infraestructura.html" class="item-footer">Infraestructura</a></li>
+						<li class="item-footer"><a href="audiovisual/educativo.html" class="item-footer">Educativo</a></li>
+						<li class="item-footer"><a href="audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
+						<li class="item-footer"><a href="audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
 
 				</div>
@@ -529,16 +529,16 @@
 						<li class="item-footer"><a class="item-footer" href="fotografia/extremo.html">Extremo</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/publicitaria.html">Publicitaria</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/retrato.html">Retrato</a></li>
-						<li class="item-footer"><a class="item-footer" href="fotografia/prudcciones.html">Producciones en estudio</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/prodcciones.html">Producciones en estudio</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/agricultura.html">Agricultura</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/cruce.html">Cruce de Los Andes</a></li>
 					</ul>
 
 					<a id="closeNav4" data-toggle="" href="#footer-diseño" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Diseño<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-diseño" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a href="#." class="item-footer">Gráfica</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Editorial</a></li>
-						<li class="item-footer"><a href="#." class="item-footer">Digital</a></li>
+						<li class="item-footer"><a href="diseno/digital.html" class="item-footer">Gráfica</a></li>
+						<li class="item-footer"><a href="diseno/editorial.html" class="item-footer">Editorial</a></li>
+						<li class="item-footer"><a href="diseno/digital.html" class="item-footer">Digital</a></li>
 					</ul>
 
 				</div>
@@ -549,19 +549,19 @@
 
 					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="#.">Stand</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Arquigrafía</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Exposiciones</a></li>
+						<li class="item-footer"><a class="item-footer" href="espacios/stand.html">Stand</a></li>
+						<li class="item-footer"><a class="item-footer" href="espacios/arquigrafia.html">Arquigrafía</a></li>
+						<li class="item-footer"><a class="item-footer" href="espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="#." aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
 					<a id="closeNav6" data-toggle="" href="#footer-Drone" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Vuelos<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-Drone" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="#.">Drone</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Helicóptero</a></li>
+						<li class="item-footer"><a class="item-footer" href="vuelos/drone.html">Drone</a></li>
+						<li class="item-footer"><a class="item-footer" href="vuelos/helicoptero.html">Helicóptero</a></li>
 					</ul>
 				</div>
 
