--- a/es/fotografia/cruce.html
+++ b/es/fotografia/cruce.html
@@ -219,11 +219,11 @@
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-audiovisual" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a href="../audiviosual/institucional.html" class="item-footer">Institucional</a></li>
-						<li class="item-footer"><a href="../audiviosual/infraestructura.html" class="item-footer">Infraestructura</a></li>
-						<li class="item-footer"><a href="../audiviosual/educativo.html" class="item-footer">Educativo</a></li>
-						<li class="item-footer"><a href="../audiviosual/publicitario.html" class="item-footer">Publicitario</a></li>
-						<li class="item-footer"><a href="../audiviosual/mapping.html" class="item-footer">Mapping</a></li>
+						<li class="item-footer"><a href="../audiovisual/institucional.html" class="item-footer">Institucional</a></li>
+						<li class="item-footer"><a href="../audiovisual/infraestructura.html" class="item-footer">Infraestructura</a></li>
+						<li class="item-footer"><a href="../audiovisual/educativo.html" class="item-footer">Educativo</a></li>
+						<li class="item-footer"><a href="../audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
+						<li class="item-footer"><a href="../audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
 
 				</div>
@@ -241,7 +241,7 @@
 						<li class="item-footer"><a class="item-footer" href="../fotografia/extremo.html">Extremo</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/publicitaria.html">Publicitaria</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/retrato.html">Retrato</a></li>
-						<li class="item-footer"><a class="item-footer" href="../fotografia/prodcciones.html">Producciones en estudio</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/producciones.html">Producciones en estudio</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/agricultura.html">Agricultura</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/cruce.html">Cruce de Los Andes</a></li>
 					</ul>
