--- a/es/fotografia/naturaleza.html
+++ b/es/fotografia/naturaleza.html
@@ -1,4 +1,4 @@
-o<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
@@ -242,7 +242,7 @@ o<!DOCTYPE html>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/extremo.html">Extremo</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/publicitaria.html">Publicitaria</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/retrato.html">Retrato</a></li>
-						<li class="item-footer"><a class="item-footer" href="../fotografia/prodcciones.html">Producciones en estudio</a></li>
+						<li class="item-footer"><a class="item-footer" href="../fotografia/producciones.html">Producciones en estudio</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/agricultura.html">Agricultura</a></li>
 						<li class="item-footer"><a class="item-footer" href="../fotografia/cruce.html">Cruce de Los Andes</a></li>
 					</ul>
