--- a/es/huevo.html
+++ b/es/huevo.html
@@ -216,7 +216,7 @@
 						<li class="item-footer"><a class="item-footer" href="fotografia/extremo.html">Extremo</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/publicitaria.html">Publicitaria</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/retrato.html">Retrato</a></li>
-						<li class="item-footer"><a class="item-footer" href="fotografia/prodcciones.html">Producciones en estudio</a></li>
+						<li class="item-footer"><a class="item-footer" href="fotografia/producciones.html">Producciones en estudio</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/agricultura.html">Agricultura</a></li>
 						<li class="item-footer"><a class="item-footer" href="fotografia/cruce.html">Cruce de Los Andes</a></li>
 					</ul>
