Hago ajustes de diseño en los slider de la seccion de diseño

--- a/es/diseno/digital.html
+++ b/es/diseno/digital.html
@@ -271,6 +271,14 @@
 		</div>
 	</footer>
 
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="col-12">
+			<p class="texto">Diseño Digital</p>
+		</div>
+	</div>
+
+
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
 	<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
