--- a/es/diseno/editorial.html
+++ b/es/diseno/editorial.html
@@ -117,7 +117,7 @@
 	<section class="diseno container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
-				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
+				<div class="carousel slide" id="primary-carousel-d" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<img class="d-none d-lg-block w-100 img-fluid" src="../../img/DISENO-EDITORIAL-PRINCIPAL-01.jpg" alt="Dieño Editorial">
@@ -152,7 +152,15 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-200-anos-04-M.jpg" alt="200 Años">
 						</div>
 					</div>
+					<!-- Botón Comprar -->
 					<a class="btn-default" href="https://www.google.com" target="_blank"><span class="icon-chevron-thin-right"></span> Comprar</a>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#segundo-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#segundo-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -182,6 +190,13 @@
 						</div>
 					</div>
 					<a class="btn-default" href="https://www.google.com" target="_blank"><span class="icon-chevron-thin-right"></span> Comprar</a>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#tercer-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#tercer-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -211,6 +226,13 @@
 						</div>
 					</div>
 					<a class="btn-default" href="https://www.google.com" target="_blank"><span class="icon-chevron-thin-right"></span> Comprar</a>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#cuarto-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#cuarto-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -240,6 +262,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-SUSANA-CASTRO-04-M.jpg" alt="Susan Castro">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#quinto-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#quinto-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -268,6 +297,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-PROSAP-04-M.jpg" alt="PROSAP">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#sexto-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#sexto-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -296,6 +332,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-CONGRESO-04-M.jpg" alt="V Congreso Mundial por los derechos de la  Infancia y  la Adolescencia">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#septimo-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#septimo-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -324,6 +367,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-CARACOLES-04-M.jpg" alt="Los Caracoles, Techint">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#octavo-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#octavo-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -352,6 +402,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-RUTA-40-04-M.jpg" alt="Ruta 40">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#noveno-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#noveno-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -380,6 +437,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-EDITORIAL-RAMON-OSSA-04-M.jpg" alt="Ramon Ossa">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#decimo-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#decimo-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -495,6 +559,13 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="col-12">
+			<p class="texto">Diseño Editorial</p>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
