--- a/es/diseno/grafico.html
+++ b/es/diseno/grafico.html
@@ -117,7 +117,7 @@
 	<section class="diseno container-fluid">
 		<div class="row">
 			<div class="col-12 slide-lp">
-				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
+				<div class="carousel slide" id="primary-carousel-d" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<img class="d-none d-lg-block w-100 img-fluid" src="../../img/DISENO-GRAFICO-TEATRO-DEL-BICENTENARIO-01.jpg" alt="Teatro del Bicentenario">
@@ -136,6 +136,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-TEATRO-DEL-BICENTENARIO-04-M.jpg" alt="Teatro del Bicentenario">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#primary-carousel-d" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#primary-carousel-d" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -156,6 +163,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-BORBORE-02-M.jpg" alt="Bodegas Bórbore">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#segundo-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#segundo-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -184,6 +198,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-SAIDEL-04-M.jpg" alt="Saul Saidel">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#tercer-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#tercer-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -208,6 +229,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-PAMPAS-DEL-CURA-03-M.jpg" alt="Pampas del Cura">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#cuarto-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#cuarto-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -229,6 +257,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-GRUPO-PETERSEN-02-M.jpg" alt="Grupo Petersen">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#quinto-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#quinto-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -312,6 +347,13 @@
 							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-RUTA-150-02-M.jpg" alt="Ruta 150">
 						</div>
 					</div>
+					<!-- Controles del Slider -->
+					<a class="carousel-control-prev" href="#decimo-carousel" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon icon-chevron-thin-left" aria-hidden="true"></span>
+					</a>
+					<a class="carousel-control-next" href="#decimo-carousel" role="button" data-slide="next">
+						<span class="carousel-control-next-icon icon-chevron-thin-right" aria-hidden="true"></span>
+					</a>
 				</div>			
 			</div>
 		</div>
@@ -427,6 +469,14 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="col-12">
+			<p class="texto">Diseño Gráfico</p>
+		</div>
+	</div>
+
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
