Agrego meta tags en todas la paginas del sitio

--- a/es/audiovisual/infraestructura.html
+++ b/es/audiovisual/infraestructura.html
@@ -2,7 +2,31 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>GHM Contenidos</title>
+	<title>GHM | Audiovisual Infraestructura</title>
+	<meta name="description" content="Descubrimos la magnitud de las grandes obras, captando con perfecta síntesis sus procesos constructivos.">
+
+	<!-- METATAGS -->
+	<meta name="languaje" content="ES"/>
+	<meta name="robots" content="index, follow"/>
+	<meta name="googlebot" content="index, follow"/>
+	<meta name="geo.region" content="AR-J"/>
+	<meta name="geo.placename" content="San Juan"/>
+	<meta name="author" content="Los Pepes WEB, www.lospepesweb.com"/>
+
+	<!--OG-->
+	<meta property="og:title" content="GHM Contenidos"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="http://www.ghmtv.com"/>
+	<meta property="og:image" content="../../img/favicon-32x32.png"/>
+	<meta property="og:site_name" content="GHM Contenidos"/>
+	<meta property="og:description" content="Descubrimos la magnitud de las grandes obras, captando con perfecta síntesis sus procesos constructivos."/>
+	<meta property="og:locale" content="es_LA"/>
+
+	<!-- ICONO -->
+	<link rel="icon" type="image/png" sizes="32x32" href="../../img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon-16x16.png">
+
+	<!-- LINKS -->
 	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
