Agrego datos estructurados al footer del index

--- a/es/index.html
+++ b/es/index.html
@@ -436,7 +436,7 @@
 	<!-- Contacto  -->
 	<section class="index contacto">
 		<div class="container">
-			<div class="row">
+			<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				<div class="col-12 text-center">
 					<h2 class="titulo">Contacto</h2>
 				</div>
@@ -444,7 +444,7 @@
 					<p class="texto">Esteban Echeverría 772 Sur (5400) | San Juan · Argentina</p>
 				</div>
 				<div class="col-12 text-center">
-					<p class="texto">
+					<p class="texto" itemprop="telephone">
 						<span class="icon-phone"></span>
 						+ 54 264 4266621 · 4085014
 					</p>
@@ -452,7 +452,7 @@
 				<div class="col-12 text-center">
 					<p class="texto">
 						<span class="icon-mouse"></span>
-						<a href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a> | 
+						<a href="mailto:ghmtv@ghmtv.com" itemprop="email">ghmtv@ghmtv.com</a> | 
 						<a href="https://www.youtube.com/channel/UC1i1fEIsMjAJA5peqehEHiw" target="_blank"><span class="icon-youtube"></span></a>
 						<a href="https://www.facebook.com/Ghmtv/" target="_blank"><span class="icon-facebook"></span></a>
 						<a href="#"><span class="icon-instagram"></span></a>
