Agrego datos al htacces y ajustes pequeños de diseño en la seccion diseño

--- a/es/diseno/grafico.html
+++ b/es/diseno/grafico.html
@@ -496,8 +496,12 @@
 
 	<!-- Scroll Spy -->
 	<div class="container-fluid scrollspy">
-		<div class="col-12">
-			<p class="texto">Diseño Gráfico</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Diseño Gráfico</p>
+				</div>
+			</div>
 		</div>
 	</div>
 
