--- a/es/diseno/digital.html
+++ b/es/diseno/digital.html
@@ -297,10 +297,15 @@
 
 	<!-- Scroll Spy -->
 	<div class="container-fluid scrollspy">
-		<div class="col-12">
-			<p class="texto">Diseño Digital</p>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Diseño Digital</p>
+				</div>
+			</div>
 		</div>
 	</div>
+
 
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
