--- a/es/index.html
+++ b/es/index.html
@@ -142,13 +142,20 @@
 				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img class="d-block w-100 img-fluid" src="../img/slide1.jpg" alt="">
+							<img class="d-none d-lg-block w-100 img-fluid" src="../img/slide1.jpg" alt="Slide 01">
+							<img class="d-block d-lg-none w-100 img-fluid" src="../img/slide1-m.jpg" alt="Slide 01">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100 img-fluid" src="../img/slide2.jpg" alt="">
+							<img class="d-none d-lg-block w-100 img-fluid" src="../img/slide2.jpg" alt="Slide 02">
+							<img class="d-block d-lg-none w-100 img-fluid" src="../img/slide2-m.jpg" alt="Slide 01">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100 img-fluid" src="../img/slide3.jpg" alt="">
+							<img class="d-none d-lg-block w-100 img-fluid" src="../img/slide3.jpg" alt="Slide 03">
+							<img class="d-block d-lg-none w-100 img-fluid" src="../img/slide3-m.jpg" alt="Slide 01">
+						</div>
+						<div class="carousel-item">
+							<img class="d-none d-lg-block w-100 img-fluid" src="../img/slide3.jpg" alt="Slide 04">
+							<img class="d-block d-lg-none w-100 img-fluid" src="../img/slide4-m.jpg" alt="Slide 01">
 						</div>
 					</div>
 				</div>			
@@ -217,7 +224,7 @@
 		<div class="container">
 			<div class="row justify-content-center align-items-center">
 				<div class="col-12 col-lg-4">
-					<img src="../img/avatarG.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
+					<img src="../img/INDEX-HUEVO-BIO.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
 				</div>
 				<div class="d-none d-lg-block col-1"></div>
 				<div class="col-12 col-lg-5">
@@ -245,7 +252,7 @@
 		<div class="row justify-content-center">
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-01.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Gustavo</h3>
 						<p class="texto-equipo">Director general</p>
@@ -254,7 +261,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-02.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Gabriela</h3>
 						<p class="texto-equipo">Directora creativa</p>
@@ -263,64 +270,91 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-03.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Valentín</h3>
-						<p class="texto-equipo">Equipo de diseño</p>
+						<p class="texto-equipo">Diseño</p>
 					</figcaption>
 				</figure>
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-04.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Belén</h3>
-						<p class="texto-equipo">Equipo de diseño</p>
+						<p class="texto-equipo">Diseño</p>
 					</figcaption>
 				</figure>
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-05.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Analía</h3>
-						<p class="texto-equipo">Equipo de diseño</p>
+						<p class="texto-equipo">Diseño</p>
 					</figcaption>
 				</figure>
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-06.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Guillermina</h3>
-						<p class="texto-equipo">Equipo de diseño</p>
+						<p class="texto-equipo">Diseño</p>
 					</figcaption>
 				</figure>
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-07.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Mercedes</h3>
-						<p class="texto-equipo">Equipo de diseño</p>
+						<p class="texto-equipo">Diseño</p>
 					</figcaption>
 				</figure>
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
-					<figcaption>
-						<h3 class="titulo-equipo">Matías</h3>
-						<p class="texto-equipo">Equipo de animación</p>
-					</figcaption>
-				</figure>
-			</div>
-			<div class="col-6 col-lg-4 text-center fila">
-				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-08.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Katharina</h3>
-						<p class="texto-equipo">Equipo de administración</p>
+						<p class="texto-equipo">Administración</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="../img/INDEX-EQUIPO-GHM-09.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Enrique</h3>
+						<p class="texto-equipo">Administración</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="../img/INDEX-EQUIPO-GHM-10.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Matías</h3>
+						<p class="texto-equipo">Administración</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="../img/INDEX-EQUIPO-GHM-11.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Milagros</h3>
+						<p class="texto-equipo">Producción</p>
+					</figcaption>
+				</figure>
+			</div>
+			<div class="col-6 col-lg-4 text-center fila">
+				<figure>
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<figcaption>
+						<h3 class="titulo-equipo">Ezequiel</h3>
+						<p class="texto-equipo">Informática</p>
 					</figcaption>
 				</figure>
 			</div>
