Agrego textos a la seccion fotografia

--- a/es/fotografia/artistico.html
+++ b/es/fotografia/artistico.html
@@ -153,74 +153,74 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-01.jpg" class="img-fluid" alt="Los Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-01.jpg" class="img-fluid" alt="Valle de Los Patos, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore deleniti consequatur, odit distinctio, magni sapiente quo.</p>
+				<h2 class="titulo">Valle de Los Patos, San Juan</h2>
+				<p class="texto">Formado por el río de Los Patos, desde acá arrancan diversos caminos y pasos subalternos en dirección a Chile, y en esto radica su importancia.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa laborum id, suscipit eveniet ex commodi dolorum, voluptates.</p>
+				<h2 class="titulo">Río Melchor. Al centro una majada de cabras en plena veranada.</h2>
+				<p class="texto">El pastoreo trashumante de los crianceros se desarrolla hace siglos en une spacio geográfico de características especiales: los valles longitudinales de la región alto andina.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-02.jpg" class="img-fluid" alt="Vías de tren">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-02.jpg" class="img-fluid" alt="Río Melchor">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-03.jpg" class="img-fluid" alt="Personal en obra">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-03.jpg" class="img-fluid" alt="Entrañas de Jáchal, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci nesciunt at sunt, necessitatibus culpa! Rem, maiores, voluptates.</p>
+				<h2 class="titulo">Entrañas de Jáchal, San Juan</h2>
+				<p class="texto">La fecundidad de sus valles, convierten a Jáchal en una región de exclente producción agrícola.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia esse aliquam recusandae tenetur velit, cumque molestias soluta.</p>
+				<h2 class="titulo">Entrañas de Jáchal, San Juan</h2>
+				<p class="texto">Río de las arboledas. Tierra de metales. En lengua indígena, dos significados posibles para Jáchal, nombre del tercer departamento en superficie de San Juan.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-04.jpg" class="img-fluid" alt="Pascualama, San Juan">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-04.jpg" class="img-fluid" alt="Entrañas de Jáchal, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-05.jpg" class="img-fluid" alt="Dique Punta Negra">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-05.jpg" class="img-fluid" alt="Jáchal en altura, San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique delectus harum, itaque debitis in, repudiandae atque dolore!</p>
+				<h2 class="titulo">Jáchal en altura, San Juan</h2>
+				<p class="texto">Desde el aire se puede apreciar la naturaleza que rodea nuestra provincia, sabemos encontrar el momento justo para captar esa inmensidad.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ipsa iure accusamus quis, iusto quasi excepturi cupiditate.</p>
+				<h2 class="titulo">Ruta 150, San Juan</h2>
+				<p class="texto">Es una obra estratégica por su ubicación y el acceso a rutas nacionales e internacionales, generando un escenario que ofrece múltiples beneficios para la región.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-06.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-06.jpg" class="img-fluid" alt="Ruta 150, San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-07.jpg" class="img-fluid" alt="Dique Caracoles, San Juan">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-07.jpg" class="img-fluid" alt="Bajada hacia el Río Rocín, Chile">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores maxime voluptatibus, corrupti quae obcaecati eos, reiciendis harum?</p>
+				<h2 class="titulo">Bajada hacia el Río Rocín, Chile</h2>
+				<p class="texto">Hoy es conocido como El Aletón. Es oscuro, muy encajonado y pedregoso. Sus faldas son paradas e interrumpidas por derrumbes.</p>
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp text-container">
-				<h2 class="titulo">Lorem ipsum dolor sit.</h2>
-				<p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, vero sequi! Aspernatur ipsum animi accusamus qui, libero.</p>
+				<h2 class="titulo">Reserva de la biósfera San Guillermo, San Juan</h2>
+				<p class="texto">Con casi un millón de hectáreas, es una de las áreas más protegidas de la República Argentina.</p>
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../../img/FOTOGRAFIA-ARTISTICA-08.jpg" class="img-fluid" alt="Veladero, San Juan">
+				<img src="../../img/FOTOGRAFIA-ARTISTICA-08.jpg" class="img-fluid" alt="Reserva de la biósfera San Guillermo, San Juan">
 			</div>
 		</div>
 
